# Django-MedSecure

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  encryption.py  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml  python-package.yml
examples/: basic_usage.py
medcrypto/: __init__.py  encryption.py
tests/: test_quick_encrypt.py
